# parl-ia-ment

./: .gitignore  README.md  pyproject.toml
src/: conftest.py  main.py
src/archives/: all_themes.json  all_themes_normalized.json  all_themes_question_count.json  all_unique_themes.json
src/archives/metrics/: result.py
src/archives/notebooks/: generate_run_metrics.ipynb
src/archives/tests/: test_scrape_qg_question.py  test_scrape_qosd_question.py
src/archives/utils/: themes.py
src/charts/: calibration.py  cohen.py  performance.py
src/configs/: env.py
src/data/: explanations.json  hierarchy.json  ngram_data.json  positions.json  themes_step_0.csv  themes_step_1.csv  themes_step_2.csv  themes_step_3.csv
src/databases/: connector.py  mongo_connector.py
src/errors/: NoExportDestinationException.py  NoIdInQuestionException.py  NotATagException.py  ThemesListTooLongException.py  WrongBatchIdProvided.py  WrongConfidenceTypeException.py  WrongQuestionTypeException.py  WrongRunIdProvided.py
src/exporters/: export.py  export_to_csv.py  export_to_json.py  export_to_mongo.py
src/metrics/: batch.py  results_analyzer.py  run.py  softmax.py
src/models/: Batch.py  Charts.py  Colors.py  ExportFormat.py  LLMOutput.py  Metrics.py  Prompt.py  Question.py  Result.py  Theme.py
src/prompting/: get_prompts.py  get_themes_list.py  llm_wrappers.py  prompt_mask.py  prompt_templates.py  run_prompt.py
src/scrapers/: scrape_search_tool.py
src/tables/: performance.py
src/utils/: database.py  dataframes.py  fixtures.py  helpers.py  logger.py  normalize_themes.py
(+118 files in other folders)
